# dotfiles

./: .emacs  Makefile  README.md  emacs-bootstrap.el  make-palette.sh  palette.txt
cobble-bar/: Cargo.toml
cobble-bar-agent/: Cargo.toml
cobble-bar-agent/src/: main.rs  widgets.rs
cobble-bar-agent/src/widgets/: clock.rs
cobble-bar/src/: sink.rs
cobblede/: cobblede.sh  greetd.toml
home/: .abcde.conf  .bash_aliases  .clang-format  .emacs  .gitconfig  .mailcap  .makepkg.conf  .muttrc  .pylintrc  .quiltrc  .tmux.conf
home/.config/aerc/: aerc.conf
home/.config/alacritty/: alacritty.yml
home/.config/eww/: eww.scss  eww.yuck
home/.config/foot/: foot.ini
home/.config/gtklock/: style.css
home/.config/hypr/: hyprland.conf  hyprpaper.conf
home/.config/kitty/: kitty.conf
home/.config/nvim/: init.lua  lazy-lock.json
home/.config/nvim/lua/config/: keymaps.lua  lazy.lua
home/.config/nvim/lua/plugins/: agda.lua  coq.lua  cpp.lua  editor.lua  haskell.lua  lean.lua  ocaml.lua  python.lua  rust.lua  theme.lua
home/.config/sway/: config
home/.config/waybar/: config  style.css
home/.gnupg/: gpg.conf
patches/: 0001-Fix-.gitconfig-and-email-addresses.patch  0001-wayland-Enable-the-sway-desktop.patch  1001-Fix-.gitconfig-and-email-addresses.patch  1001-wayland-Enable-the-sway-desktop.patch  1002-wayland-Disable-hardware-cursors.patch  1002-wayland-Setup-sway-desktop-for-work-virtual-machines.patch
wayland/: 50-systemd-user.conf  apple-dcp.conf  appledrm.conf  cobblede.sh  greetd.toml  settings.ini  startwm.sh  sway.conf  wayland.sh
wireplumber/: Cargo.toml  Gir.toml
wireplumber-sys/: .gitignore  Cargo.toml  Gir.toml  build.rs  wrapper.h
wireplumber-sys/gir-1.0/: Wp-0.5.gir  libspa-0.2.gir  pipewire-0.3.gir
wireplumber/src/auto/: alias.rs  conf.rs  core.rs  enums.rs  flags.rs  mod.rs  node.rs  object.rs  object_interest.rs  object_manager.rs  plugin.rs  properties.rs  spa_json.rs  versions.txt
work-patches/: 0001-Fix-.gitconfig-and-email-addresses.patch  0002-Setup-sway-desktop.patch  0002-Use-default-sway-background-on-work-machine.patch
