[package]
name = "cobble-bar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
gio-sys = { git = "https://github.com/gtk-rs/gtk-rs-core", rev = "4f30a037" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core", rev = "4f30a037" }
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs-core", rev = "4f30a037" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", rev = "4f30a037" }
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wireplumber = { path = "../wireplumber" }

[dependencies.ffi]
package = "wireplumber-sys"
path = "../wireplumber-sys"
